# algo_rust

./: .gitignore  Cargo.toml
src/: lib.rs
src/number/: cnk.rs  fibonacci_iterator.rs  mod.rs
src/string/: mod.rs  prefix_function.rs  search_knuth_morris_pratt.rs  search_rabin_karp.rs  string_suffix_trie_compressed_arena.rs  string_suffix_trie_ukkonen.rs  suffix_trie_compressed.rs  suffix_trie_naive.rs  z_function.rs
src/structures/: mod.rs  suffix_trie.rs  trie_node.rs
