[package]
name = "algo_rust"
version = "0.1.0"
authors = ["Alexey Minchakov <lexaaim@gmail.com>"]
# repository = ""
# homepage = ""
license = "MIT"
readme = "README.md"
description = "Implementation of some algorithms and data structures for competitive coding"

[[bin]]
name = "suffix_trie_naive"
path = "src/bin/string/suffix_trie_naive.rs"

